--- a/main.html
+++ b/main.html
@@ -10,6 +10,10 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<p style="background-color:#eee ; color:#00f; font-size:20px;">Paragraph 1</p>
+	<p>Paragraph 2</p>
+	<p style="background-color:#eee ; color:#00f; font-size:20px;">Paragraph 3</p>
+	<p>Paragraph 4</p>
 
 </body>
 
